--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -7,14 +7,16 @@ ViewData["Title"] = "About Us";
 		<div class="col-md-11">
 			<p class="fs-1 fw-bold">About Us</p>
 		</div>
-		<div class="col-md-1">
-			<button id="back-btn"
-				class="btn btn-sm w-100 btn-primary"><i class="fas fa-angle-left"></i> Back</button>
-			<script>
-				$("#back-btn").click(function () {
-					window.history.back();
-				});
-			</script>
+		<div class="col-md-1 d-flex justify-content-end">
+			<div>
+				<button id="back-btn"
+					class="btn btn-sm  btn-primary"> <span class="material-icons">arrow_back</span></button>
+				<script>
+					$("#back-btn").click(function () {
+						window.history.back();
+					});
+				</script>
+			</div>
 		</div>
 	</div>
 	<div class="about-container">
@@ -32,11 +34,11 @@ ViewData["Title"] = "About Us";
 			types of tickets efficiently.
 		</p>
 	</div>
-	
-<div>
-	<p >To access the source code of this project, visit our GitHub repository:</p>
-	<a href="https://github.com/marcuwynu23/TicketSquad"
-		target="_blank"
-		class="">GitHub Repository</a>
-</div>
+
+	<div>
+		<p>To access the source code of this project, visit our GitHub repository:</p>
+		<a href="https://github.com/marcuwynu23/TicketSquad"
+			target="_blank"
+			class="">GitHub Repository</a>
+	</div>
 </div>
