--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -7,14 +7,16 @@ ViewData["Title"] = "Account";
 		<div class="col-md-11">
 			<p class="fs-1 fw-bold">Account</p>
 		</div>
-		<div class="col-md-1">
-			<button id="back-btn"
-				class="btn btn-sm w-100 btn-primary"><i class="fas fa-angle-left"></i> Back</button>
-			<script>
-				$("#back-btn").click(function () {
-					window.history.back();
-				});
-			</script>
+		<div class="col-md-1 d-flex justify-content-end">
+			<div>
+				<button id="back-btn"
+					class="btn btn-sm  btn-primary"> <span class="material-icons">arrow_back</span></button>
+				<script>
+					$("#back-btn").click(function () {
+						window.history.back();
+					});
+				</script>
+			</div>
 		</div>
 	</div>
 
