--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -1,6 +1,6 @@
 @{
-ViewData["Title"] = "Login";
-Layout = "~/Views/Auth/_AuthLayout.cshtml";
+	ViewData["Title"] = "Login";
+	Layout = "~/Views/Auth/_AuthLayout.cshtml";
 }
 
 
@@ -9,35 +9,20 @@ Layout = "~/Views/Auth/_AuthLayout.cshtml";
 		<p class="fs-2 text-center fw-bold text-primary">Login</p>
 		<form method="POST">
 			<!-- Email input -->
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<input type="email"
-					id="email"
-					name="email"
-					type="email"
-					class="form-control" />
-				<label class="form-label"
-					for="email">Email address</label>
+			<div data-mdb-input-init class="form-outline mb-4">
+				<input type="email" id="email" name="email" type="email" class="form-control" />
+				<label class="form-label" for="email">Email address</label>
 			</div>
 
 			<!-- Password input -->
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<input type="password"
-					id="password"
-					name="password"
-					class="form-control" />
-				<label class="form-label"
-					for="password">Password</label>
+			<div data-mdb-input-init class="form-outline mb-4">
+				<input type="password" id="password" name="password" class="form-control" />
+				<label class="form-label" for="password">Password</label>
 			</div>
 
 			<div class="form-outline mb-4">
-				<label cl
-					ass="form-label"
-					for="role">Role</label>
-				<select name="role"
-					id="role"
-					class="">
+				<label cl ass="form-label" for="role">Role</label>
+				<select name="role" id="role" class="">
 					<option value="0">Admin</option>
 					<option value="1">User</option>
 				</select>
@@ -49,13 +34,8 @@ Layout = "~/Views/Auth/_AuthLayout.cshtml";
 				<div class="col d-flex justify-content-center">
 					<!-- Checkbox -->
 					<div class="form-check">
-						<input class="form-check-input"
-							type="checkbox"
-							value=""
-							id="form1Example3"
-							checked />
-						<label class="form-check-label"
-							for="form1Example3"> Remember me </label>
+						<input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
+						<label class="form-check-label" for="form1Example3"> Remember me </label>
 					</div>
 				</div>
 
@@ -66,9 +46,7 @@ Layout = "~/Views/Auth/_AuthLayout.cshtml";
 			</div>
 
 			<!-- Submit button -->
-			<button data-mdb-ripple-init
-				type="submit"
-				class="btn btn-primary btn-block">Sign in</button>
+			<button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block">Sign in</button>
 		</form>
 	</div>
 </div>
